# raft

./: pyproject.toml
python/src/pyraft/: message.py  server.py
src/pyraft/: client.py  consts.py  controller.py  log.py  message.py  network.py  notes.md  protocol.py  server.py  state.py  storage.py
tests/: test_controller.py  test_log.py  test_machine.py  test_state.py
tests/state/: test_append_entries.py  test_append_entries_response.py  test_core.py  test_request_vote.py  test_request_vote_response.py  test_scenario.py  test_tick.py
